Edge Login React Web: Fix pin login not displaying correctly on mobile none chrome browsers

--- a/packages/edge-login-ui-react/src/modules/Login/LoginWithPin/LoginWithPin.webStyle.scss
+++ b/packages/edge-login-ui-react/src/modules/Login/LoginWithPin/LoginWithPin.webStyle.scss
@@ -156,21 +156,28 @@
             position: absolute;
             font-size: 72px;
             letter-spacing: 1px;
-            color: #f6f6f6;
             margin-top: -14px;
+
+            .grey {
+              color: #f6f6f6;
+            }
+            .dark {
+              color: $color-grey-02;
+            }
           }
 
           .input {
             width: 120px;
             padding-top: 8px;
+            z-index: 1;
 
             input {
-              color: $color-grey-02;
-              font-size: 69px;
-              letter-spacing: 2px;
-              padding-left: 14px;
-              padding-bottom: 26px;
-              height: 0px;
+              color: transparent;
+              text-shadow: 0 0 0 #2196f3;
+
+              &:focus {
+                outline: none;
+              }
             }
             span[class*="error"] {
               display: block;
